--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -15,7 +15,8 @@
 //@use "./customers" as *;
 //@use "./trainingCard" as *;
 @use "./admin-forms" as *;
-       
+       @import "./buttons";
+
 
 :root {
   --brand-navy: #0F1E2E;
