--- a/src/app/styles/booking.scss
+++ b/src/app/styles/booking.scss
@@ -221,9 +221,9 @@
   padding: 8px 12px;
   cursor: pointer;
 }
-.btn:hover {
-  background: #f8fafc;
-}
+//.btn:hover {
+  //background: #f8fafc;
+//}
 .btn-primary {
   background: #0ea5e9;
   color: #fff;
