style(book): include book styles in global admin bundle
Added @use "./book" to globals.scss so Book page styles are loaded via the central styles entry.

Left legacy dialog SCSS imports commented out to keep the stylesheet clean.

--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -4,6 +4,7 @@
    @use "./header" as *;
     @use "./offers" as *;
     @use "./booking" as *;
+    @use "./book" as *;
     //@use "./bookDialog" as *;
      // @use "./customerDialog" as *;
      @use "./profile" as *;
